--- a/AspNetCoreWebApplication/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreWebApplication/Views/Shared/_Layout.cshtml
@@ -52,10 +52,10 @@
         <header>
             <nav class="website-nav">
                 <ul>
-                    <li><a class="home-link" href="https://aws.amazon.com/">Home</a></li>
-                    <li><a href="https://aws.amazon.com/what-is-cloud-computing/">About</a></li>
-                    <li><a href="https://aws.amazon.com/solutions/">Services</a></li>
-                    <li><a href="https://aws.amazon.com/contact-us/">Contact</a></li>
+                    <li><a class="home-link" href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/services">Services</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -68,7 +68,7 @@
     <footer>
         <p class="footer-contents">
             Designed and developed with
-            <a href="https://aws.amazon.com/careers/devtools-jobs/">♥</a> in Seattle.
+        <a href="http://bipinshrestha.com>♥</a> by Bipin Shrestha.
         </p>
     </footer>
 
