fixed the shared cshtml
fi

--- a/AspNetCoreWebApplication/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreWebApplication/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
     <footer>
         <p class="footer-contents">
             Designed and developed with
-        <a href="http://bipinshrestha.com>♥</a> by Bipin Shrestha.
+        <a href="http://bipinshrestha.com">♥</a> by Bipin Shrestha.
         </p>
     </footer>
 
